fix deployUrl e basePath for assets

--- a/angular.json
+++ b/angular.json
@@ -37,6 +37,7 @@
           },
           "configurations": {
             "production": {
+              "deployUrl": "./",
               "fileReplacements": [
                 {
                   "replace": "src/environments/environment.ts",
